[gd_scene load_steps=2 format=3 uid="uid://bco2bxp5k2mng"]

[ext_resource type="Script" path="res://Scenes/Components/HitboxComponent.gd" id="1_sqsts"]

[node name="HitboxComponent" type="Area2D"]
script = ExtResource("1_sqsts")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
